--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
     "displayName": "bootstrap-snippets-vscode",
     "description": "",
     "version": "0.0.1",
+    "publisher": "bhavana05",
+    "license":"See License section in README.md",
+    "homepage":"https://github.com/bhavana05/bootstrap-snippets-vscode",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/bhavana05/bootstrap-snippets-vscode"
+    },
     "engines": {
         "vscode": "^1.30.0"
     },
